--- a/src/app/components/users/replace-request/replace-request.component.html
+++ b/src/app/components/users/replace-request/replace-request.component.html
@@ -6,6 +6,7 @@
           <div class="card">
               <div class="card-header">
                   <h5>Replacement requests</h5>
+                  <button class="btn btn-warning" [routerLink]="['../../sales/create-request']">Create request</button>
               </div>
               <div class="card-body">
                   <div class="custom-datatable">
