--- a/src/app/components/users/replace-request/replace-request.component.html
+++ b/src/app/components/users/replace-request/replace-request.component.html
@@ -2,7 +2,7 @@
 <div class="container-fluid">
     <div class="row">
 
-        <div class="col-sm-6" *ngIf="!toggleReplaceDetails">
+        <div class="col-sm-12" *ngIf="!toggleReplaceDetails">
           <div class="card">
               <div class="card-header">
                   <h5>Replacement requests</h5>
@@ -15,17 +15,25 @@
                       <table class="table table-striped table-bordered" >
                         <thead>
                           <tr>
-                            <th>Order Id</th>
+                            <th>Customer name</th>
+                            <th>Mobile</th>
                             <th>Product name</th>
                             <th>Asset #</th>
+                            <th>Start date</th>
+                            <th>Reason</th>
+                            <th>Message</th>
                             <th>Action</th>
                           </tr>
                         </thead>
                         <tbody *ngFor="let o of orderitem">
                           <tr *ngIf="o.request_id==1">
-                            <td>{{o.order_item_id}}</td>
+                            <td [routerLink]="['../customers',o.customer_id]">{{o.firstName}}</td>
+                            <td [routerLink]="['../customers',o.customer_id]">{{o.mobile}}</td>
                             <td>{{o.prod_name.substring(0,50)+'...'}}</td>
                             <td>{{o.asset_id}}</td>
+                            <td>{{o.startDate | date:'dd MMM yyyy HH:mm'}}</td>
+                            <td>{{o.request_reason}}</td>
+                            <td>{{o.request_message}}</td>
                             <td  (click)="replaceProductOrderById(o.order_id, o.order_item_id,o.renewals_timline, o.tenure_id, o.asset_id); toggleReplaceDetails=!toggleReplaceDetails"><a><i class="fa fa-pencil"></i></a></td>                   
                           </tr>                          
                         </tbody>
@@ -152,7 +160,7 @@
                   <p>Sub total: ₹{{(rentDifference)+damageCharges+totalTaxAmount((rentDifference)+damageCharges)}}</p>
                   <p>Difference in security deposit: {{securityDepositDiff}}</p>
                   <p>Total: ₹{{(rentDifference)+damageCharges+totalTaxAmount((rentDifference)+damageCharges)+securityDepositDiff}}</p>
-                  <button class="btn btn-primary" (click)="replace(productDetails.order_item_id,productDetails.id,productDetails.indexs, productDetails.tenure_id, productDetails.dp,productDetails.assetId,prodId, damageCharges)">Replace</button>
+                  <button *ngIf="assetId" class="btn btn-primary" (click)="replace(productDetails.order_item_id,productDetails.id,productDetails.indexs, productDetails.tenure_id, productDetails.dp,productDetails.assetId,prodId, damageCharges)">Replace</button>
                 </div>
                 </div>
             </div>
