--- a/src/app/components/users/return-request/return-request.component.html
+++ b/src/app/components/users/return-request/return-request.component.html
@@ -1,7 +1,7 @@
 <!-- Container-fluid starts-->
 <div class="container-fluid">
     <div class="row">
-        <div class="col-sm-6" *ngIf="!toggleReplaceDetails">
+        <div class="col-sm-12" *ngIf="!toggleReplaceDetails">
             <div class="card">
                 <div class="card-header">
                     <h5>Return requests</h5>
@@ -16,19 +16,29 @@
                         <table class="table table-striped table-bordered" >
                           <thead>
                             <tr>
-                              <th>Order Id</th>
+                              <th>Customer name</th>
+                              <th>Mobile</th>
                               <th>Product name</th>
+                              <th>Tenure</th>
                               <th>Asset #</th>
+                              <th>Start date</th>
                               <th>Pickup date</th>
+                              <th>Approval status</th>
+                              <th>Request status</th>
                               <th>Action</th>
                             </tr>
                           </thead>
                           <tbody *ngFor="let o of orderitem">
                             <tr *ngIf="o.request_id==2">
-                              <td>{{o.order_item_id}}</td>
+                              <td [routerLink]="['../customers',o.customer_id]">{{o.firstName}}</td>
+                              <td [routerLink]="['../customers',o.customer_id]">{{o.mobile}}</td>
                               <td>{{o.prod_name.substring(0,50)+'...'}}</td>
+                              <td>{{o.tenure_period}}</td>
                               <td>{{o.asset_id}}</td>
+                              <td>{{o.startDate | date:'dd MMM yyyy HH:mm'}}</td>
                               <td>{{o.requested_date | date:'dd MMM yyyy HH:mm'}}</td>
+                              <td>{{o.approval_status}}</td>
+                              <td>{{o.request_status}}</td>
                               <td (click)="returnProductOrderById(o.order_id, o.order_item_id,o.renewals_timline,o.asset_id); toggleReplaceDetails=!toggleReplaceDetails"><a><i class="fa fa-pencil"></i></a></td>                   
                             </tr>                          
                           </tbody>
