--- a/src/app/components/sales/replacement-order/replacement-order.component.html
+++ b/src/app/components/sales/replacement-order/replacement-order.component.html
@@ -23,19 +23,19 @@
                               <!-- <th>Payu Trans Id</th> -->
                               <th>Order date</th>
                               <th>Customer name</th>
-                              <th>Security deposit</th>
+                              <th>Amount</th>
                               <th>Payment status</th>
                               <th>Delivery status</th>
                             </tr>
                           </thead>
                           <tbody *ngFor="let o of filteredOrders">
                             <tr [routerLink]="['../orders',o.id]">
-                              <td>{{o.primary_id}}</td>
+                              <td>{{o.order_id}}</td>
                               <!-- <td>{{o.payuid}}</td> -->
-                              <td>{{o.createdAt}}</td> 
+                              <td>{{o.createdAt | date: 'dd MM yyyy hh:mm'}}</td> 
                               <td>{{o.firstName}}</td> 
-                              <td>₹{{o.totalSecurityDeposit}}</td>    
-                              <td>{{o.refundStatus}}</td> 
+                              <td>₹{{o.grandTotal}}</td>    
+                              <td>{{o.paymentStatus}}</td> 
                               <td>{{o.delivery_status}}</td>                       
                             </tr>                          
                           </tbody>
