--- a/src/app/components/users/return-request/return-request.component.html
+++ b/src/app/components/users/return-request/return-request.component.html
@@ -24,7 +24,6 @@
                               <th>Start date</th>
                               <th>Pickup date</th>
                               <th>Approval status</th>
-                              <th>Request status</th>
                               <th>Action</th>
                             </tr>
                           </thead>
@@ -37,9 +36,12 @@
                               <td>{{o.asset_id}}</td>
                               <td>{{o.startDate | date:'dd MMM yyyy HH:mm'}}</td>
                               <td>{{o.requested_date | date:'dd MMM yyyy HH:mm'}}</td>
-                              <td>{{o.approval_status}}</td>
-                              <td>{{o.request_status}}</td>
-                              <td (click)="returnProductOrderById(o.order_id, o.order_item_id,o.renewals_timline,o.asset_id); toggleReplaceDetails=!toggleReplaceDetails"><a><i class="fa fa-pencil"></i></a></td>                   
+                              <td>
+                                <span *ngIf="o.approval_status==0 && o.request_status==1"><i class="fa fa-circle text-warning"></i> Requested</span>
+                                <span *ngIf="o.approval_status==0 && o.request_status==0"><i class="fa fa-circle text-danger"></i> Rejected</span>
+                                <span *ngIf="o.approval_status==1 && o.request_status==0"><i class="fa fa-circle text-success"></i> Approved</span>
+                              </td>
+                              <td *ngIf="o.request_status==1" (click)="returnProductOrderById(o.order_id, o.order_item_id,o.renewals_timline,o.asset_id); toggleReplaceDetails=!toggleReplaceDetails"><a><i class="fa fa-pencil"></i></a></td>                   
                             </tr>                          
                           </tbody>
                         </table>
