--- a/src/app/components/sales/upcoming-renewals/upcoming-renewals.component.html
+++ b/src/app/components/sales/upcoming-renewals/upcoming-renewals.component.html
@@ -60,6 +60,7 @@
                               <th>Mobile</th>
                               <th>Prod name</th>
                               <th>asset Id</th>
+                              <th>Rent/ Mo</th>
                               <th>Start date</th>
                               <th>End date</th>
                             </tr>
@@ -71,6 +72,7 @@
                               <td [routerLink]="['../../users/customers',o.customer_id]">{{o.mobile}}</td>
                               <td>{{o.prod_name}}</td> 
                               <td>{{o.assetId}}</td> 
+                              <td>{{o.price}}</td>
                               <td>{{o.startDate}}</td>    
                               <td>{{o.expiryDate}}</td>                      
                             </tr>                          
